<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permit_location_title"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/iv_permit_location"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_marginTop="@dimen/margin_50"
        android:src="@drawable/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:gravity="center"
        android:layout_marginBottom="@dimen/margin_24"
        android:text="@string/permit_location"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toTopOf="@+id/btn_permit_location_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_permit_location"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/btn_permit_location_ok"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_40"
        android:background="@drawable/bg_round_12"
        android:backgroundTint="@color/green_300"
        android:gravity="center"
        android:text="@string/permit"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_permit_location_cancel" />

    <TextView
        android:id="@+id/btn_permit_location_cancel"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/margin_40"
        android:background="@drawable/bg_round_12"
        android:backgroundTint="@color/gray_300"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_permit_location_ok"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>