<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.setting.withdraw.WithdrawFragment">

    <include
        android:id="@+id/include_withdraw"
        layout="@layout/base_tapbar_back" />

    <TextView
        android:id="@+id/tv_withdraw_small_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_36"
        android:text="@string/withdraw_warning"
        android:textColor="@color/gray_700"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_withdraw" />

    <TextView
        android:id="@+id/tv_withdraw_text"
        android:layout_width="@dimen/fill_layout"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_40"
        android:layout_marginTop="@dimen/margin_8"
        android:text="@string/withdraw_context"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_withdraw_small_text" />

    <TextView
        android:id="@+id/btn_withdraw"
        android:layout_width="@dimen/fill_layout"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_40"
        android:background="@drawable/bg_round_12"
        android:backgroundTint="@color/green_300"
        android:gravity="center"
        android:paddingVertical="@dimen/padding_16"
        android:text="@string/withdraw_btn"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>