<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_running_trash_dialog"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    app:layout_constraintTop_toBottomOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_running_trash_dialog_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_50"
        android:background="@drawable/bg_round_top"
        android:backgroundTint="#EAEAEA">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_trash_left"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_trash_right"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_trash_center"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_trash_bottom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/margin_80" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_trash_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/margin_80" />

        <TextView
            android:id="@+id/tv_trash_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/save_trash"
            android:textColor="@color/gray_700"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_vinyl"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/tbv_trash_paper"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_center"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_left"
            app:layout_constraintTop_toTopOf="@+id/gl_trash_top"
            app:trashIcon="@drawable/ic_vinyl"
            app:trashType="비닐" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_paper"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/tbv_trash_can"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_center"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_left"
            app:layout_constraintTop_toBottomOf="@+id/tbv_trash_vinyl"
            app:trashIcon="@drawable/ic_paper"
            app:trashType="@string/paper" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_can"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/gl_trash_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_center"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_left"
            app:layout_constraintTop_toBottomOf="@+id/tbv_trash_paper"
            app:trashIcon="@drawable/ic_can"
            app:trashType="@string/can" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_glass"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/tbv_trash_plastic"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_center"
            app:layout_constraintTop_toTopOf="@+id/gl_trash_top"
            app:trashIcon="@drawable/ic_glass"
            app:trashType="@string/glass" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_plastic"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/tbv_trash_ext"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_center"
            app:layout_constraintTop_toBottomOf="@+id/tbv_trash_glass"
            app:trashIcon="@drawable/ic_plastic"
            app:trashType="@string/plastic" />

        <com.plogging.ecorun.util.custom.TrashButtonView
            android:id="@+id/tbv_trash_ext"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="@dimen/fill_layout"
            android:layout_margin="@dimen/margin_8"
            app:layout_constraintBottom_toTopOf="@+id/gl_trash_bottom"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_right"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_center"
            app:layout_constraintTop_toBottomOf="@+id/tbv_trash_plastic"
            app:trashIcon="@drawable/ic_extra"
            app:trashType="@string/extra" />

        <TextView
            android:id="@+id/btn_trash_save"
            android:layout_width="@dimen/fill_layout"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_8"
            android:background="@drawable/bg_round_8"
            android:backgroundTint="@color/green_300"
            android:gravity="center"
            android:paddingVertical="@dimen/padding_16"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_trash_right"
            app:layout_constraintStart_toStartOf="@+id/gl_trash_left"
            app:layout_constraintTop_toTopOf="@+id/gl_trash_bottom" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>