<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.auth.password.FindPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_auth_find_pw_left"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_auth_find_pw_right"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_24" />

    <include
        android:id="@+id/include_auth_find_pw"
        layout="@layout/base_tapbar_back" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_12"
        android:text="@string/find_pw_alert"
        android:textColor="@color/gray_700"
        app:layout_constraintStart_toStartOf="@+id/gl_auth_find_pw_left"
        app:layout_constraintTop_toBottomOf="@+id/include_auth_find_pw" />

    <EditText
        android:id="@+id/et_auth_find_pw_email"
        android:layout_width="@dimen/fill_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/bg_round_border_gray_4"
        android:hint="@string/hint_id"
        android:inputType="textEmailAddress"
        android:paddingVertical="@dimen/padding_16"
        android:paddingStart="@dimen/padding_16"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_700"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toStartOf="@+id/gl_auth_find_pw_right"
        app:layout_constraintStart_toStartOf="@+id/gl_auth_find_pw_left"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/iv_auth_find_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_8"
        android:padding="@dimen/padding_8"
        android:src="@drawable/ic_cancel"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/et_auth_find_pw_email"
        app:layout_constraintEnd_toEndOf="@+id/et_auth_find_pw_email"
        app:layout_constraintTop_toTopOf="@+id/et_auth_find_pw_email" />

    <TextView
        android:id="@+id/tv_auth_find_pw_err"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/wrong_type_email"
        android:textColor="@color/red_800"
        android:textSize="@dimen/text_size_14"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/gl_auth_find_pw_left"
        app:layout_constraintTop_toBottomOf="@+id/et_auth_find_pw_email" />

    <TextView
        android:id="@+id/btn_auth_find_pw"
        android:layout_width="@dimen/fill_layout"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_30"
        android:background="@drawable/btn_selector"
        android:enabled="false"
        android:gravity="center"
        android:padding="@dimen/padding_16"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toStartOf="@+id/gl_auth_find_pw_right"
        app:layout_constraintStart_toStartOf="@+id/gl_auth_find_pw_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_auth_find_pw_err" />


</androidx.constraintlayout.widget.ConstraintLayout>